tests/parsing/smtlib/v2.6/errors/076_define-funs-rec_bad_body_1.expected
File "tests/parsing/smtlib/v2.6/errors/076_define-funs-rec_bad_body_1.smt2", line 2, character 34-35:
2 | (define-funs-rec ((foo () bool)) (_))
                                      ^
Error while parsing a recursive functions definition,
      read the reserved word '_',
      but expected a term for the first function's body.
